--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,261 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="60" data-price="45.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UIeCUX"><img src="https://m.media-amazon.com/images/I/514O-z7dY8L._SR400,400_.jpg" alt="Bluetooth Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2UIeCUX">Bluetooth Earbuds,Xunpuls Bluetooth 5.0 True Wireless Earbuds 110H Playtime 3D Stereo Sound...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $45.95</strong> using code:60U8SKPR</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UIeCUX">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="19" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UZaUvi"><img src="https://m.media-amazon.com/images/I/61JHUT2DqBL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2UZaUvi">TV Antenna, HDTV Antenna Indoor Digital Amplified 60 Miles with Switch Amplifier Signal Booster...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>19% off at $17.99</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UZaUvi">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DCx1wK"><img src="https://m.media-amazon.com/images/I/61-L21xESmL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DCx1wK">Bluetooth Headphones Speaker 2 in 1,DolTech Wireless Headphones Neckband Wearable Speaker...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>35% off at $49.99</strong> using code:35TH53QL</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DCx1wK">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DAl0rV"><img src="https://m.media-amazon.com/images/I/710j+2JbnJL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DAl0rV">Wireless Bluetooth Speaker with HD Sound Quality and Bass,1800mAh Huge Capacity Rechargeable Battery...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $26.99</strong> using code:603MPRFN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DAl0rV">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="21.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UIf0CT"><img src="https://m.media-amazon.com/images/I/51pqcjviyeL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2UIf0CT">Universal Travel Adapter, ouliyo All in One Worldwide European Plug Power Adapter, International AC Outlet Plug...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $21.88</strong> using code:10HAXPS8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UIf0CT">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="56.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J0c9Do"><img src="https://m.media-amazon.com/images/I/51GETtLfM1L._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J0c9Do">True Wireless Earbuds Bluetooth 5.0 with Leather Charging Case</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $56.99</strong> using code:509OSYSU</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J0c9Do">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W9qMYH"><img src="https://m.media-amazon.com/images/I/51gYIkJtwHL._SR400,400_.jpg" alt="Earphone" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2W9qMYH">TIN HiFi T2 HiFi 2DD Double Dynamic Drive in Ear Earphone Bass DJ Metal Headphones</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $49.99</strong> using code:15TINT2E</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W9qMYH">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="54.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IYRLCu"><img src="https://m.media-amazon.com/images/I/81Oz0yaYcOL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IYRLCu">Divoom Outdoor2 Portable Bluetooth Wireless Rugged Speaker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $54.90</strong> using code:10KWEYVN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IYRLCu">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="39.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J4JJb4"><img src="https://m.media-amazon.com/images/I/71lSqRIPtRL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J4JJb4">Divoom Aurabox Bluetooth 4.0 Smart LED Speaker with APP Control for Pixel Art Creation...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $39.90</strong> using code:10KWEYVN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J4JJb4">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="28.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J6jfq3"><img src="https://m.media-amazon.com/images/I/51U+J5KIziL._SR400,400_.jpg" alt="Bluetooth Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J6jfq3">Bluetooth Earbuds, MIFA X3 TWS Wireless Bluetooth 5.0 Earphones with Microphone</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $28.99</strong> using code:20G7L1E3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J6jfq3">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XHAbaa"><img src="https://m.media-amazon.com/images/I/61pw2TZCGBL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XHAbaa">Emergency Hand Crank Self Powered AM/FM NOAA Solar Weather Radio with LED Flashlight</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $69.99</strong> using code:80Z4DFY8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XHAbaa">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="49.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XPXb7c"><img src="https://m.media-amazon.com/images/I/712Dpb7QT1L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XPXb7c">Car Charger, Aluminum Alloy 39W Dual USB Car Charger Quick Charger</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $49.00</strong> using code:80Z4DFY8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XPXb7c">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="68.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2L5V51p"><img src="https://m.media-amazon.com/images/I/61RD+2qQwaL._SR400,400_.jpg" alt="TV Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2L5V51p">TV Headphones Wireless RF Headphones UHF HiFi Transmitter 328 feet Wireless Range Clear Stereo Sound...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $68.99</strong> using code:40BU3OFD</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2L5V51p">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XPCisK"><img src="https://m.media-amazon.com/images/I/81HXoiFTajL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>48% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XPCisK">EverBrite AAA Batteries Alkaline Battery 96 Count Bulk Pack</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>48% off at $16.99</strong> using code:48T32L3E</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XPCisK">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GLa0tq"><img src="https://m.media-amazon.com/images/I/61JYBQEPeoL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GLa0tq">ZealSound Genuine Wood Earphones Headphones HiFi Earbuds with Built-in Microphone</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $9.99</strong> using code:152ETWJE</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GLa0tq">Copy & Use code</a>
+  </div>
+</div>
+
  <div class="card clearfix" data-score="40" data-price="25.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XMoCic"><img src="https://m.media-amazon.com/images/I/615DNkbq6JL._SR400,400_.jpg" alt="" /></a>
