--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -213,7 +213,8 @@
   });
   </script>
 
-
+  <!-- Content Insights of Amazon-->
+  <div id="amzn-assoc-ad-9964b306-5e55-4810-adb9-cb2e4b817f96"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=9964b306-5e55-4810-adb9-cb2e4b817f96"></script>
 
   </body>
 </html>
