--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,176 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="10" data-price="32.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wg5LM9"><img src="https://m.media-amazon.com/images/I/712HHB4NffL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Wg5LM9">HOMEMAXS Mesh Desk Organizer with Sliding Drawer, 5 Removable Stacking Sorter Sections...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $32.99</strong> using code:1065IDNY</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wg5LM9">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="26.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J1mvTl"><img src="https://m.media-amazon.com/images/I/71FqdaHuaDL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J1mvTl">WILLED Acrylic Makeup Organizer 360 Rotating Adjustable Carousel Makeup Holder Cosmetic Storage Display Case</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $26.98</strong> using code:15AXYABA</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J1mvTl">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="32.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J15poP"><img src="https://m.media-amazon.com/images/I/81S9aZQvRkL._SR400,400_.jpg" alt="Men's Dress Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J15poP">JOUSEN Men's Dress Shoes Classic Brogue Oxford Business Wingtip Shoes</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>51% off at $32.89</strong> using code:51EFN8ED</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J15poP">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="33.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XNdGRl"><img src="https://m.media-amazon.com/images/I/61pzakYIOQL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XNdGRl">Computer Speakers, Smalody PC Wired Computer Sound Bar,7 Color Pulsation LED Flicker Stereo USB Powered Mini Soundbar</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $33.99</strong> using code:308WI6S4</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XNdGRl">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GPkUyI"><img src="https://m.media-amazon.com/images/I/61ETam39riL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GPkUyI">Electric Eraser for Artists, 140 Eraser Refills, Rechargeable Battey Erasers for Derwent Inktense Drawing</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $19.89</strong> using code:30N214X5</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GPkUyI">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IZDq8S"><img src="https://m.media-amazon.com/images/I/610h2eExFLL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2IZDq8S">COSOOS 2 Pack Clear Case Compatible for iPhone Xs Case (2018) and iPhone X Case (2017)...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $8.99</strong> using code:50C3SEMP</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IZDq8S">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XP4ewK"><img src="https://m.media-amazon.com/images/I/611ZIUOhKXL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XP4ewK">Sinvitron Rechargeable LED Camping Lantern, Portable Small Tent Light/Power Bank 6400mAh 2 in 1 Design</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $22.89</strong> using code:409K8JXH</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XP4ewK">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XNfklZ"><img src="https://m.media-amazon.com/images/I/61c3ZxSnFqL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XNfklZ">Lantoo Wireless Charger, Qi-Certified Fast Wireless Charging Pad for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $13.99</strong> using code:506D3P3N</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XNfklZ">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GEOoOf"><img src="https://m.media-amazon.com/images/I/71h6TJ9DMlL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GEOoOf">Tote Handbags,Joy&magiC Women Top Handle Satchel Handbags Lady Shoulder Bag PU Leather Purse Tote Bag Black</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $25.99</strong> using code:30ROYKSH</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GEOoOf">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VB1AgQ"><img src="https://m.media-amazon.com/images/I/71G6xWHHbVL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VB1AgQ">SULIVES Stainless Steel Wine Tumbler, 12 oz Double Wall Vacuum Insulated Stemless Tumbler</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $19.99</strong> using code:302H86NK</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VB1AgQ">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="13.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2UXpG5C"><img src="https://m.media-amazon.com/images/I/61z0l7Dma5L._SR400,400_.jpg" alt="" /></a>
