deals with goup

--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -40,7 +40,7 @@
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;}
-  .codes .card_wrap .card .deal_btn{float:left;width:13%;text-align:center;margin:35px 1.5% 0 1.5%;border:1px solid #616161;padding:10px 0;}
+  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;border:1px solid #616161;padding:10px 0;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;display:block;font-family: 'Montserrat', sans-serif;}
 }
 
@@ -206,5 +206,8 @@
   .promotions .rt_cnt .box_wrap .box{float:left;width:48%;margin:10px 1% 5px 1%;}
   /*.promotions .rt_cnt .box_wrap .box img{width:100%;-webkit-filter: grayscale(100%);filter:none;}*/
 }
+
+#goup{position:fixed;bottom:10px;right:10px;display:none;}
+#goup img{width:50px;}
 
 
