--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,227 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="20" data-price="149.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WcARE5"><img src="https://m.media-amazon.com/images/I/61CctzJphcL._SR400,400_.jpg" alt="Adjustable Bench" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2WcARE5">FLYBIRD Adjustable Bench,Utility Weight Bench for Full Body Workout- Multi-Purpose Foldable Incline/Decline Bench</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $149.89</strong> using code:20FE7FRJ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WcARE5">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="27.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J48wfu"><img src="https://m.media-amazon.com/images/I/716gD-CwZxL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J48wfu">Purewell Filter Water Bottle BPA Free with 4-Stage Intergrated Filter Straw for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $27.88</strong> using code:20K4CQGV</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J48wfu">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GMOyDv"><img src="https://m.media-amazon.com/images/I/71mqK-7lqKL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GMOyDv">SYOSIN Ankle Straps for Cable Machines - Ankle Cuffs with Reinforced Double D-Ring and Neoprene Padded...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $12.99</strong> using code:50TMILEL</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GMOyDv">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XYYtwF"><img src="https://m.media-amazon.com/images/I/61JWQ08SuYL._SR400,400_.jpg" alt="Badminton Shuttlecocks" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XYYtwF">KEVENZ Advanced Goose Feather Badminton Shuttlecocks,Nylon Feather Shuttlecocks High Speed Badminton Birdies Balls</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $9.99</strong> using code:42V3EZVS</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XYYtwF">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DBdEEo"><img src="https://m.media-amazon.com/images/I/61cf1813wqL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DBdEEo">Eco Walker Inflatable Soccer Goal with Net, Carrying Bag, Two Way Pump, Set Up in 30Seconds...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $69.99</strong> using code:15UBBOGT</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DBdEEo">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="119.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VEhx5A"><img src="https://m.media-amazon.com/images/I/71guD4KkNiL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VEhx5A">Teekland White Baby Safety Gate/Baby Protect Walls/Fireplace Fence/Dog Gates Indoor/Play Yard with...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $119.99</strong> using code:40OUCR4Z</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VEhx5A">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WeyT68"><img src="https://m.media-amazon.com/images/I/81HxbzC3zYL._SR400,400_.jpg" alt="Hemp Oil" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2WeyT68">Hemp Oil for Pain Extract, Anxiety & Stress Relief 1000mg - May Help with Sleep, Mood, Stress...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $16.99</strong> using code:50XXFRX8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WeyT68">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XWyE0i"><img src="https://m.media-amazon.com/images/I/81Fub7nmtnL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XWyE0i">Mindbreaker Frankincense Essential Oil, 100% Pure and Natural, Premium Quality Frankincense Oil</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $13.99</strong> using code:50K2UIWG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XWyE0i">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="8" data-price="36.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J9xmKS"><img src="https://m.media-amazon.com/images/I/61aEsh0gbHL._SR400,400_.jpg" alt="Hair Straightener Flat Iron" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>8% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2J9xmKS">Hair Straightener Flat Iron for All Hair Types with Digital Display and 1 inch Ceramic Tourmaline Constant Heat Up within 30s...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>8% off at $36.99</strong> using code:8WRVMUV</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2J9xmKS">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="10.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WcA4mB"><img src="https://m.media-amazon.com/images/I/61AVF313IwL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2WcA4mB">Lot-yeah Garlic Press Stainless Steel - Professional Garlic Mincer Ginger Squeezer Heavy Duty Garlic Presser</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>38% off at $10.97</strong> using code:38X58I7M</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WcA4mB">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VxBACY"><img src="https://m.media-amazon.com/images/I/61jy2m3YnIL._SR400,400_.jpg" alt="Wireless Phone Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VxBACY">HAODU Wireless Phone Charger, Qi-Certified Fast Charger Pad Compatible ...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $39.99</strong> using code:704JA35P</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VxBACY">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="34.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VxXvtE"><img src="https://m.media-amazon.com/images/I/71Mugq56NUL._SR400,400_.jpg" alt="Memory Foam Dog Bed" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VxXvtE">BarkBox Orthopedic Plush Memory Foam Dog Bed or Crate Mat Small-XL, 4 Colors | Removable Washable Cover...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $34.99</strong> using code:20VB42YB</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VxXvtE">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="78.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XV9RcG"><img src="https://m.media-amazon.com/images/I/61zSw7dQerL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2XV9RcG">Vyncs GPS Tracker No Monthly Fee OBD, Real Time 3G Car GPS Tracking Trips Free 1 Year...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $78.93</strong> using code:25YHKH8C</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XV9RcG">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="35.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2ZH5LXt"><img src="https://m.media-amazon.com/images/I/61xD0VhQleL._SR400,400_.jpg" alt="Bluetooth Headphone" /></a>
