--- a/app/views/promocodes_days/day_07.html.erb
+++ b/app/views/promocodes_days/day_07.html.erb
@@ -31,6 +31,7 @@
 
       </div><!--./warp-->
     </div><!--./codes-->
+    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
   </div><!--./layout-->
 <script>
  <%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %>
