--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -1,6 +1,7 @@
 /*@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);*/
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400');
+@import url('https://fonts.googleapis.com/css?family=Anton');
 h1,h2,h3,h4,h5,h6,p,ul,li,address,form,fieldset,legend,input,button,dl,dt,dd,table,thead,tbody,tfoot,tr,th,td{margin:0;padding:0;font-family:inherit;}
 /*기본여백 삭제, font-family:inherit;는 특정 태그는 body에서 지정한 서체를 상속받지 못함. 그래서 강제로 상속받도록 지정  */
 a img{border:0;}/* a태그로 감싼 이미지의 파란 테두리 삭제 (ie9-10) */
@@ -84,8 +85,8 @@ header .gnb_m,header .gnb_open2{display:none;}
   header .gnb_pc>ul{display:none;}
   header .gnb_m{display:block;height:200px;background:#000;position:fixed;left:-800px;top:0;width:100%;z-index:303;}
   header .gnb_m>ul{margin:10px 0 0 5%;}
-  header .gnb_m>ul>li{border-right:none;float:none;}
-  header .gnb_m>ul>li>a{text-decoration:none;font-size:50px;font-weight:600;line-height:1.3;text-align:left;color:#fff;display:block;}
+  header .gnb_m>ul>li{border-right:none;float:none;font-family:'Anton', sans-serif;}
+  header .gnb_m>ul>li>a{text-decoration:none;font-size:50px;font-weight:600;line-height:1.1;text-align:left;color:#fff;display:block;}
   header .gnb_m>ul>li>a>em{font-size:17px;}
   header .gnb_m>ul>li>ul{margin-left:30px;}
   header .gnb_m>ul>li>ul>li{}
@@ -146,10 +147,10 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav{margin-top:60px;}
   .sub_nav .sub_nav_pc{display:none;}
   .sub_nav .gnb_m{display:block;background:#000;position:fixed;right:-800px;top:0;width:100%;z-index:303;}
-  .sub_nav .gnb_m>ul{margin:50px 0 0 5%;}
+  .sub_nav .gnb_m>ul{margin:10px 0 0 5%;}
   .sub_nav .gnb_m>ul>li{border-right:none;float:none;}
-  .sub_nav .gnb_m>ul>li>a{text-decoration:none;font-size:35px;font-weight:bold;line-height:1.3;text-align:left;color:#fff;display:block;}
-  .sub_nav .gnb_m>ul>li>a.active{color:#fff;font-weight:500;border-bottom:2px solid #fff;}
+  .sub_nav .gnb_m>ul>li>a{text-decoration:none;font-size:45px;line-height:1.1;font-family: 'Anton', sans-serif;;text-align:left;color:#fff;display:block;}
+  /*.sub_nav .gnb_m>ul>li>a.active{color:#fff;font-weight:500;border-bottom:2px solid #fff;}*/
   .sub_nav .gnb_m>ul>li>a>em{font-size:17px;}
   .sub_nav .gnb_m>ul>li>ul{margin-left:30px;}
   .sub_nav .gnb_m>ul>li>ul>li{}
