--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -87,8 +87,8 @@
 	.featured .gnb_close img{width:40px;height:40px;}
 	.featured .gnb_kbg{display:none;position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:301;}
 	
-	.featured .filter-search{margin-top:60px;padding:0 20px;}
-	.featured .filter-search .filter-button{color:#fff;font-weight:bold;padding:0;font-size:22px;text-transform:uppercase;line-height:1.5;}
+	.featured .filter-search{margin:10px 0 0 5%;}
+	.featured .filter-search .filter-button{font-family: 'Anton', sans-serif;color:#fff;font-weight:bold;padding:0;font-size:35px;text-transform:uppercase;line-height:1.1;}
 	.featured .featured_left, .featured .featured_right{float:none;width:100%;margin:0;}
 	
 	.featured .gift_guide .gift_box{height:auto;}
