--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -20,9 +20,9 @@
   .gadgets_wrapper{margin-top:60px;}
   .gadgets_wrapper main #filter{position:fixed;right:-800px;top:0;width:100%;z-index:302;background:#000;}
   .gadgets_wrapper main #filter.on{top:0;}
-  .gadgets_wrapper main #filter .ui-group{padding:10px 30px 30px 10px;}
+  .gadgets_wrapper main #filter .ui-group{margin:10px 0 0 5%;}
   .gadgets_wrapper main #filter .color_group{margin-top:0;}
-  .gadgets_wrapper main #filter .ui-group label{font-family: 'Anton', sans-serif;font-size:45px;text-transform:uppercase;color:#fff;border-bottom:1px solid #fff;padding-left:10px;}
+  .gadgets_wrapper main #filter .ui-group label{font-family: 'Anton', sans-serif;font-size:45px;text-transform:uppercase;color:#fff;border-bottom:1px solid #fff;}
   .gadgets_wrapper main #filter .ui-group ul li a{font-family: 'Anton', sans-serif;font-size:40px;color:#fff;line-height:1;font-weight:bold;text-transform:uppercase;}
   .gadgets_wrapper main .gnb_open{display:block;position:fixed;right:-10px;top:2px;z-index:301;margin:0 5%;}
   .gadgets_wrapper main .gnb_open img{width:40px;height:40px;}
